--- a/main.ipynb
+++ b/main.ipynb
@@ -4,8 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recomendação musical em decorrência do mapeamento facial"
+    "### Recomendação musical em decorrência do mapeamento facial\n",
+    "\n",
+    "_Este projeto de pesquisa explora o contexto da Inteligência Artificial para a identificação de microexpressões faciais sutis, de menores dimensões, e involuntárias. Ainda, este projeto utiliza aspectos da musicoterapia, a fim de se viabilizar um sistema de recomendação musical._"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bibliotecas necessárias\n",
+    "__________"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
