--- a/main.ipynb
+++ b/main.ipynb
@@ -22,7 +22,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2 #pip install opencv-python \n",
+    "\n",
+    "from deepface import DeepFace #pip install deepface\n",
+    "\n",
+    "import matplotlib.pyplot as plt"
+   ]
   },
   {
    "cell_type": "markdown",
