--- a/main.ipynb
+++ b/main.ipynb
@@ -109,8 +109,17 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
